refact: removed static gaps and ensured responsiveness

--- a/src/features/overview/components/css/overview_list_tile_row.css
+++ b/src/features/overview/components/css/overview_list_tile_row.css
@@ -2,5 +2,19 @@
     display: flex;
     width: 100%;
     height: 7.5rem; 
+     gap: 16px;
 }
 
+@media (max-width:800px){
+    .overview-list-tile-row-container{
+    height: 6rem; 
+    gap: 12px;
+    }
+}
+
+@media (max-width:600px){
+    .overview-list-tile-row-container{
+        flex-direction: column;
+    height: 360px; 
+    }
+}
